--- a/portfolio.html
+++ b/portfolio.html
@@ -42,63 +42,108 @@
         <ul>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/texnohryak.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Технокряк</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/poster-new-orlean-vs-golden-star.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Постер New Orlean vs Golden Star</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/restoran-seafood.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Ресторан Seafood</h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/project-prime.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Проект Prime</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/project-boxes.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Проект Boxes</h2>
               <p>Приложение</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/inspiration-has-no-borders.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/limited-edition.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Издание Limited Edition</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/project-lab.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Проект LAB</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <li>
             <a href="">
-              <img src="" alt="" width="" height="" />
+              <img
+                src="./img/img-portfolio/growing-business.jpg"
+                alt="Изображение проекта"
+                width="370"
+                height="294"
+              />
               <h2>Growing Business</h2>
               <p>Приложение</p>
             </a>
