--- a/portfolio.html
+++ b/portfolio.html
@@ -17,35 +17,34 @@
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="/" lang="en"> WebStudio </a>
+        <a class="logo" href="/" lang="en"> Web<span class="logo-color-light">Studio</span> </a>
 
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="navigation list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+          <li><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="contact list">
         <li>
-          <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a>
         </li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
       </ul>
     </header>
-
     <!-- Портфолио -->
     <main>
       <section>
         <h1 hidden>Примери портфолио</h1>
         <!-- Фильтри -->
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="list">
+          <li><button class="botton-portfolio active" type="button">Все</button></li>
+          <li><button class="botton-portfolio" type="button">Веб-сайты</button></li>
+          <li><button class="botton-portfolio" type="button">Приложения</button></li>
+          <li><button class="botton-portfolio" type="button">Дизайн</button></li>
+          <li><button class="botton-portfolio" type="button">Маркетинг</button></li>
         </ul>
-        <ul>
+        <ul class="portfolio list">
           <li>
             <a href="">
               <img
@@ -54,8 +53,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Технокряк</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title">Технокряк</h2>
+              <p class="text">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -66,8 +65,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Постер New Orlean vs Golden Star</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="text">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -78,8 +77,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Ресторан Seafood</h2>
-              <p>Приложение</p>
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="text">Приложение</p>
             </a>
           </li>
           <li>
@@ -90,8 +89,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Проект Prime</h2>
-              <p>Маркетинг</p>
+              <h2 class="title">Проект Prime</h2>
+              <p class="text">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -102,8 +101,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Проект Boxes</h2>
-              <p>Приложение</p>
+              <h2 class="title">Проект Boxes</h2>
+              <p class="text">Приложение</p>
             </a>
           </li>
           <li>
@@ -114,8 +113,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Inspiration has no Borders</h2>
-              <p>Веб-сайт</p>
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="text">Веб-сайт</p>
             </a>
           </li>
           <li>
@@ -126,8 +125,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Издание Limited Edition</h2>
-              <p>Дизайн</p>
+              <h2 class="title">Издание Limited Edition</h2>
+              <p class="text">Дизайн</p>
             </a>
           </li>
           <li>
@@ -138,8 +137,8 @@
                 width="370"
                 height="294"
               />
-              <h2>Проект LAB</h2>
-              <p>Маркетинг</p>
+              <h2 class="title">Проект LAB</h2>
+              <p class="text">Маркетинг</p>
             </a>
           </li>
           <li>
@@ -150,20 +149,22 @@
                 width="370"
                 height="294"
               />
-              <h2>Growing Business</h2>
-              <p>Приложение</p>
+              <h2 class="title">Growing Business</h2>
+              <p class="text">Приложение</p>
             </a>
           </li>
         </ul>
       </section>
     </main>
     <!-- Футер -->
-    <footer>
-      <a href="/" lang="en"> WebStudio </a>
+    <footer class="footer">
+      <a class="logo" href="/" lang="en"> Web<span class="logo-color-dark">Studio</span> </a>
       <address>
-        <p>г. Киев, пр-т Леси Украинки, 26</p>
-        <a href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <p class="real-address">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="contact list">
+          <li><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
