--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <a class="logo" href="/" lang="en"> Web<span class="logo-color-dark">Studio</span> </a>
       <address>
         <p class="real-address">г. Киев, пр-т Леси Украинки, 26</p>
-        <ul class="contact list">
+        <ul class="contact-footer list">
           <li><a href="mailto:info@devstudio.com" lang="en" class="link">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
